update to all classes